updating health to new endpoint naming

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d969debb-d64a-46d6-a35e-c4744704981d",
    "metadata": {},
    "outputs": [],
    "source": [
     "HOST = \"https://api.rewiringamerica.org\"\n",
-    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/health-impacts/\"\n",
+    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/health-impacts\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
    ]
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1ad2c02b-aa58-4389-85cb-71d38208f44a",
    "metadata": {},
    "outputs": [],
