--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d969debb-d64a-46d6-a35e-c4744704981d",
    "metadata": {},
    "outputs": [],
    "source": [
     "HOST = \"https://api.rewiringamerica.org\"\n",
-    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/health-impacts/\"\n",
+    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/etools/health-impacts/\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
    ]
@@ -2679,7 +2679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv (3.11.10)",
    "language": "python",
    "name": "python3"
   },
@@ -2693,7 +2693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
