Updating path name of the Health Impacts API (#23)

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "HOST = \"https://api.rewiringamerica.org\"\n",
-    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/health-impacts\"\n",
+    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/etools/health-impacts\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
    ]
@@ -2685,7 +2685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
