--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -508,7 +508,7 @@
    "metadata": {},
    "source": [
     "## Estimation Methodology\n",
-    "You may want to understand more about how an estimate was *made*. The `estimate_type` returned in a REM request indicates how we understand a home’s features in order to generate an estimate.\n",
+    "You may want to understand more about the *specificity* of the estimate returned. The `estimate_type` returned in a REM request indicates how much we understand about a home’s features before generating an estimate.\n",
     "\n",
     "There are two potential outputs for `estimate_type`:\n",
     "- `address_level`: The estimate is based on known features specific to the home at that address, enabling a more tailored result.\n",
