--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -512,7 +512,7 @@
     "\n",
     "There are two potential outputs for `estimate_type`:\n",
     "- `address_level`: The estimate is based on known features specific to the home at that address, enabling a more tailored result.\n",
-    "- `puma_level`: The estimate is based on typical features of homes within the Census Public Use Microdata Area (PUMA) where the home is located."
+    "- `puma_level`: The estimate is based on the provided heating fuel and typical features of homes within the Census Public Use Microdata Area (PUMA) where the home is located."
    ]
   },
   {
